--- a/packages/lab/src/form-field/FormHelperText.css
+++ b/packages/lab/src/form-field/FormHelperText.css
@@ -40,12 +40,16 @@
   font-size: var(--uitkFormFieldHelperText-font-size, var(--uitk-text-help-fontSize));
   font-style: var(--uitkFormFieldHelperText-font-style, italic);
   letter-spacing: var(--uitkFormFieldHelperText-letter-spacing, 0);
-  line-height: var(--uitkFormFieldHelperText-line-height, var(--uitk-text-caption-lineHeight));
-  min-height: var(--uitkFormFieldHelperText-min-height, var(--uitk-text-help-minHeight));
+  line-height: var(--uitkFormFieldHelperText-line-height, var(--uitk-text-help-lineHeight));
+  min-height: var(--uitkFormFieldHelperText-min-height, var(--uitk-text-caption-minHeight));
   margin-bottom: var(--uitkFormFieldHelperText-margin-bottom, 0);
   margin-top: var(--uitkFormFieldHelperText-margin-top, var(--form-field-helper-text-margin-top-full-width, var(--form-field-helper-text-margin-top)));
   opacity: var(--uitkFormFieldHelperText-opacity, 1);
   padding-left: var(--uitkFormFieldHelperText-padding-left, var(--uitk-size-unit));
   padding-right: var(--uitkFormFieldHelperText-padding-right, var(--uitk-size-unit));
   transform: var(--uitkFormFieldHelperText-transform, var(--form-field-helper-text-transform, none));
+}
+
+.backwardsCompat > .uitkFormFieldHelperText {
+  line-height: var(--uitkFormFieldHelperText-line-height, 1.3);
 }
